--- a/index.html
+++ b/index.html
@@ -5,10 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link href="./styles/style.css" rel="stylesheet">
 </head>
 <div class="main-width">
+    <nav>
+        <div>
+            <h1>
+                AgroSustenTech
+            </h1>
+        </div>
+        <div>
+            <ul>
+                <li><a href="">Início</a></li>
+                <li><a href="">Sobre</a></li>
+                <li><a href="">Conteúdos</a></li>
+                <li><a href="">Contato</a></li>
+                <li>
+                    <div class="hamburguer">
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <section>
 
+    </section>
 </div>
 
 <body>
