--- a/index.html
+++ b/index.html
@@ -30,8 +30,13 @@
             </ul>
         </div>
     </nav>
-    <section>
-
+    <section class="hero">
+        <div class="image">
+            <div class="info">
+                <h1>Tecnologia e Sustentabilidade no Campo</h1>
+                <p>Promovendo práticas agrícolas eficientes e sustentáveis por meio da inovação tecnológica</p>
+            </div>
+        </div>
     </section>
 </div>
 
