--- a/index.html
+++ b/index.html
@@ -32,11 +32,33 @@
     </nav>
     <section class="hero">
         <div class="image">
-            <div class="info">
+            <div class="text">
                 <h1>Tecnologia e Sustentabilidade no Campo</h1>
                 <p>Promovendo práticas agrícolas eficientes e sustentáveis por meio da inovação tecnológica</p>
             </div>
         </div>
+    </section>
+    <section class="info">
+        <ul>
+            <li>
+                <h1>Otimização de Processos</h1>
+                <img src="http://placehold.co/160x160">
+                <p>Como a tecnologia pode aumentar a eficiência produtiva no campo</p>
+                <button>Saiba mais</button>
+            </li>
+            <li>
+                <h1>Redução de Desperdícios</h1>
+                <img src="http://placehold.co/160x160">
+                <p>Boas práticas para minimizar o uso excessivo de recursos</p>
+                <button>Saiba mais</button>
+            </li>
+            <li>
+                <h1>Sustentabilidade Socioambiental</h1>
+                <img src="http://placehold.co/160x160">
+                <p>Melhorando a produção respeitando o meio ambiente</p>
+                <button>Saiba mais</button>
+            </li>
+        </ul>
     </section>
 </div>
 
