--- a/index.html
+++ b/index.html
@@ -60,6 +60,25 @@
             </li>
         </ul>
     </section>
+    <footer>
+        <ul>
+            <li>
+                <ul>
+                    <li>
+                        <img src="http://placehold.co/40x40" alt="">
+                        <img src="http://placehold.co/40x40" alt="">
+                        <img src="http://placehold.co/40x40" alt="">
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <img src="http://placehold.co/160x160" alt="">
+            </li>
+            <li>
+                <img src="http://placehold.co/160x160" alt="">
+            </li>
+        </ul>
+    </footer>
 </div>
 
 <body>
